# murex

./: Cargo.toml
src/: cli.rs  config.rs  main.rs  path_manager.rs  project.rs  templates.rs  utils.rs
